# algoritmi

./: CMakeLists.txt  README.md
backtrack/: README.md  sudoku.cpp
dynamic_programming/: 0-1_knapsack.cpp  README.md  boxes.cpp  scatole.cpp  zaino.cpp
extra/: array_geninput.py  heapsort.cpp
graph/: README.md  diameter.cpp  grafo.h  graph.h  graph_visit.cpp  num_min_paths.cpp  numcammini.cpp  toporder.cpp
lab1/: somma.cpp  sottoseq.cpp
lab2/: sortpesato.cpp  sortpesato_geninput.py
lab3/: diametro.cpp  visita.cpp
lab4/: toporder.cpp
proj-kraken/: README.md  kraken.cpp
proj-kraken/Dataset/input/: input0.txt  input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
proj-kraken/Dataset/output/: output17.txt  output19.txt
